2004-06-25  Iain <iain@prettypeople.org>

	* gst-libs/gst/media-info/media-info-priv.c (gmi_set_mime): Add 
	name=source for the wavparse pipeline.

2004-06-24  Johan Dahlin  <johan@gnome.org>

	* ext/theora/theoraenc.c (theora_enc_chain): Call
	gst_pad_try_set_caps instead of gst_pad_set_explicit_caps so the
	streamheader caps are set correctly.

2004-06-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/vorbis/vorbisenc.c: (raw_caps_factory),
	(gst_vorbisenc_setup), (gst_vorbisenc_set_property):
	  respect minimum bitrate; same could be done for max bitrate

2004-06-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/vorbis/vorbisenc.c: (raw_caps_factory),
	(gst_vorbisenc_setup):
	  fix sample rate range

2004-06-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/vorbis/oggvorbisenc.c: (gst_oggvorbisenc_class_init),
	(gst_oggvorbisenc_setup):
	* ext/vorbis/vorbisenc.c: (gst_vorbisenc_class_init),
	(gst_vorbisenc_setup):
	  resolve ambiguities in code and description

2004-06-24  Wim Taymans  <wim@fluendo.com>

	* ext/alsa/gstalsa.c: (gst_alsa_start), (gst_alsa_xrun_recovery):
	* ext/alsa/gstalsa.h:
	* ext/alsa/gstalsasrc.c: (gst_alsa_src_init),
	(gst_alsa_src_update_avail), (gst_alsa_src_loop):
	Use alsa trigger_tstamp to get the timestamp of the first
	sample in the buffer for more precise sync. Some cleanups.

2004-06-24  Wim Taymans  <wim@fluendo.com>

	* gst/audiorate/gstaudiorate.c: (gst_audiorate_link),
	(gst_audiorate_init), (gst_audiorate_chain),
	(gst_audiorate_set_property), (gst_audiorate_get_property):
	* gst/videorate/gstvideorate.c: (gst_videorate_class_init),
	(gst_videorate_chain):
	Added some logging, fixed an overflow bug in videorate.

2004-06-24  Benjamin Otte  <otte@gnome.org>

	* ext/kio/Makefile.am:
	  fix for builddir != srcdir and distcheck

2004-06-24  Benjamin Otte  <otte@gnome.org>

	* gst-libs/gst/colorbalance/Makefile.am:
	* gst-libs/gst/mixer/Makefile.am:
	* gst-libs/gst/play/Makefile.am: